<resources>
    <string name="app_name">RecAD</string>
    <string name="todo">TODO</string>
    <string name="account_creation">Account creation</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="surname">Surname</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="patient_information">Patient Information</string>
    <string name="select_birthdate">Select birthdate</string>
    <string name="gender">gender</string>
    <string name="save_date">Save date</string>
    <string name="select_your_birthdate">Select your birthdate</string>
    <string name="welcome">Welcome</string>
    <string name="waiting_for_permissions">Waiting for permissions</string>
    <string name="prefs_file">com.example.recad.PREFERENCE_FILE_KEY</string>
    <string name="google_login">Google login</string>
    <string name="app_id">892954487862</string>
    <string name="has_previous_dementia_diagnosis">Has previous dementia diagnosis?</string>


    <string-array name="options">
        <item>Gender…</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="languages">
        <item>Language…</item>
        <item>Spanish</item>
        <item>English</item>
        <item>Other</item>
    </string-array>

    <string-array name="recordTag">
        <item>MCI</item>
        <item>Alzheimer-A</item>
        <item>Reference-NA</item>
    </string-array>

</resources>