<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFFFFFFF">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="352dp"
        android:layout_height="332dp"
        android:background="@drawable/round_rectangle"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="353dp"
        android:layout_height="180dp"
        android:background="@drawable/round_rectangle"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687" />

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Edit surname"
        android:inputType="textPersonName"
        android:textColor="@color/text_hint"
        android:textColorHighlight="@color/pink_main"
        android:textColorHint="@color/gray_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="Edit name"
        android:inputType="textPersonName"
        android:textColor="@color/text_hint"
        android:textColorHighlight="@color/pink_main"
        android:textColorHint="@color/gray_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/dateField2"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:ems="10"
        android:hint="@string/select_birthdate"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/text_hint"
        android:textColorHighlight="@color/pink_main"
        android:textColorHint="@color/gray_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/calendarImage2"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/calendarImage2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/calendarImage2"
        android:layout_width="49dp"
        android:layout_height="39dp"
        android:layout_marginBottom="132dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/dateField2"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/noun_calendar_918451"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/genderSpinner"
        style="@style/spinnerItemStyle"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:contentDescription="@string/gender"
        android:entries="@array/options"
        android:hint="@string/gender"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toEndOf="@+id/languageSpinner"
        app:layout_constraintTop_toBottomOf="@+id/dateField2" />

    <Spinner
        android:id="@+id/languageSpinner"
        style="@style/spinnerItemStyle"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:background="@color/white"
        android:contentDescription="@string/gender"
        android:entries="@array/options"
        android:hint="@string/gender"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/dateField2"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/changePassword"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Change password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/text_hint"
        android:textColorHighlight="@color/pink_main"
        android:textColorHint="@color/gray_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/changePassword2"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:startIconDrawable="@drawable/noun_email" />

    <EditText
        android:id="@+id/changePassword2"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="Confirm password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/text_hint"
        android:textColorHighlight="@color/pink_main"
        android:textColorHint="@color/gray_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toEndOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="59dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:srcCompat="@drawable/noun_password" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pink_dark"
        android:backgroundTint="@color/pink_dark"
        android:text="Confirm changes"
        app:layout_constraintBottom_toTopOf="@+id/deleteAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/deleteAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="Delete account"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip4"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:background="@color/gray_light"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinner"
        app:layout_constraintVertical_bias="0.263" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/has_previous_dementia_diagnosis"
        android:textColor="@color/pink_main"
        app:layout_constraintBottom_toBottomOf="@+id/chip4"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/languageSpinner"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>